--- a/01.html
+++ b/01.html
@@ -62,23 +62,20 @@
             <h3 class="skill-name">程式設計入門</h3>
             <p class="skill-description">
               具備網頁設計的能力，能夠製作使用者介面與線框圖繪製，熟悉
-              HTML、CSS 和 JavaScript，並對於基礎的演算法有一定的掌握力。
+              HTML、CSS 和 JavaScript
             </p>
           </div>
           <div class="skill">
             <h3 class="skill-name">掌握網頁開發</h3>
             <p class="skill-description">
               能夠打造兼具前後端的 Web App 產品。從網頁切版、RWD、操作 DOM
-              事件、使用 AJAX 與串接 API 等前端能力，到使用 Node.js 與 MongoDB
-              建立後端功能，能夠深入瞭解網路應用程式運作的每個環節，並親手打造自己的產品。
+              事件、使用 AJAX 與串接 API 等前端能力
             </p>
           </div>
           <div class="skill">
             <h3 class="skill-name">軟體工程師實力</h3>
             <p class="skill-description">
-              前端部分能夠透過前端框架建立 SPA
-              頁面，後端則能夠建置完整的登入系統、使用 SQL
-              與資料庫設計、實作購物車與金流串接。
+              前端部分能夠透過前端框架建立 SPA頁面
             </p>
           </div>
         </div>
@@ -91,25 +88,20 @@
           <div class="experience-item">
             <h3 class="job-title">電腦銷售</h3>
             <span class="company"><i class="far fa-building"></i>華克電腦</span>
-            <span class="duration"><i class="far fa-calendar-alt"></i>２０１７ 年 ９ 月 - ２０２１ 年 ５ 月</span>
+            <span class="duration"><i class="far fa-calendar-alt"></i>2010/10~2019/1</span>
             <p>
               電腦相關產品銷售.2.電腦簡易組裝和維修.3.客戶經營4.交辦主管工作事項
             </p>
           </div>
-          <hr />
           <div class="experience-item">
             <h3 class="job-title">空中英文</h3>
-            </h3>
-            </h3>
-            </h3>
-            <span class="duration"><i class="far fa-calendar-alt"></i>２０２１ 年 7 月 - ２０２２ 年 ６
-              月</span>
-            <p>
+   
+            <span class="duration"><i class="far fa-calendar-alt">
               個人辦公電腦/電話，每日邀約並帶客戶體驗並報名
               規劃學員英語課程與諮詢，督促關懷學員
             </p>
           </div>
-          <hr />
+   
           <class="experience-item">
             <h3 class="job-title">學習經歷</h3>
 
