--- a/01.html
+++ b/01.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>履歷表</title>
 </head>
 
 <body>
 
   <header>
     <nav>
-      <span class="nav-title"> Kristina Adams </span>
+      <span class="nav-title"> Hung Zairong </span>
       <a href="#" class="nav-link">
         <i class="fas fa-print"></i>
       </a>
